# takar

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.in  README.md  setup.sh  start.sh
cmake/: download_gtest.cmake
lib/: CMakeLists.txt
lib/impl/: image.cpp
lib/impl/foobar/: foobar.cc
lib/impl/geometry/: mesh.cpp  quad.cpp  rect.cpp  sphere.cpp  triangle.cpp  voxel.cpp
lib/impl/rendering/: camera.cpp  node.cpp  path_tracer.cpp  ray.cpp  scene.cpp  viewport.cpp
lib/public/: image.h
lib/public/foobar/: foobar.h
lib/public/geometry/: bounding_box.h  mesh.h  quad.h  ray.h  rect.h  sphere.h  triangle.h  voxel.h
lib/public/rendering/: camera.h  color.h  node.h  path_tracer.h  ray.h  renderable.h  scene.h  viewport.h
takar/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_foobar.cc  test_geometry.cpp  test_image.cpp  test_rendering.cpp
